<resources>
    <string name="app_name">An App For Jack</string>
    <string name="default_person_name">Name</string>
    <string name="interests">Interests:</string>

    <string name="navigation_profile">Profile</string>
    <string name="navigation_interests">Interests</string>
    <string name="navigation_events">Events</string>
    <string name="navigation_login">Login</string>
    <string name="navigation_register">Register</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_logout">Log Out</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="navigation_friends">Friends</string>
    <string name="navigation_messaging">Messaging</string>
    <string name="login_button">Log In</string>
    <string name="register_button">Register</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="register_account">Register Account</string>
    <string name="repeat_password">repeat password</string>
    <string name="email">email</string>
    <string name="new_message">New Message</string>
    <string name="to_col">To:</string>
    <string name="subject_col">Subject:</string>
    <string name="send">Send</string>
</resources>
