<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="160dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@color/colorGrey6"
    android:orientation="vertical">
    <ScrollView
        android:id="@+id/navigation_drawer_layout_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        android:layout_marginBottom="51.5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/transparent"
            android:clickable="true">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorGrey7_Charcoal" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrey4_Grey" />

            <!-- PROFILE -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="48dp"
                android:textSize="24dp"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/color_state"
                android:text="@string/navigation_profile"
                android:onClick="goToAccount" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorGrey7_Charcoal" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/colorGrey4_Grey" />

            <!-- INTERESTS -->
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="48dp"
                android:textSize="24dp"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/color_state"
                android:text="@string/navigation_interests"
                android:onClick="goToInterests"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorGrey7_Charcoal" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/colorGrey4_Grey" />

            <!-- EVENTS -->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="48dp"
                android:textSize="24dp"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/color_state"
                android:text="@string/navigation_events"
                android:onClick="goToEvents"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorGrey7_Charcoal" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/colorGrey4_Grey" />

            <!-- LOGIN -->
            <!--
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorGrey0_Gainsboro"
                android:background="@drawable/color_state"
                android:text="@string/navigation_login"
                android:onClick="goToLogin" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorGrey7_Charcoal" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/colorGrey4_Grey" />
            -->

            <!-- FRIENDS -->
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="48dp"
                android:textSize="24dp"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/color_state"
                android:text="@string/navigation_friends"
                android:onClick="goToFriends"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorGrey7_Charcoal" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/colorGrey4_Grey" />

            <!-- REGISTER -->
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="48dp"
                android:textSize="24dp"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/color_state"
                android:text="@string/navigation_register"
                android:onClick="goToRegister" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorGrey7_Charcoal" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/colorGrey4_Grey" />

            <!-- MESSAGING -->
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="48dp"
                android:textSize="24dp"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/color_state"
                android:text="@string/navigation_messaging"
                android:onClick="goToMessaging"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorGrey7_Charcoal" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/colorGrey4_Grey" />
        </LinearLayout>
    </ScrollView>
    <!-- Bottom LinearLayout -->
    <LinearLayout
        android:id="@+id/navigation_drawer_layout_linear_logout"
        android:layout_width="match_parent"
        android:layout_height="51.5dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/navigation_drawer_layout_scrollview">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/colorGrey7_Charcoal" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_weight="2"
            android:background="@color/colorGrey4_Grey" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="3"
            android:height="48dp"
            android:textSize="24dp"
            android:paddingLeft="10dp"
            android:paddingTop="8dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/color_state"
            android:text="@string/navigation_logout"
            android:onClick="goToLogin" />
    </LinearLayout>
    <!--android:gravity="center|bottom"
    android:layout_weight="1"-->
</android.support.constraint.ConstraintLayout>