<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- The main content view -->
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_gap"
        tools:context="edu.uta.softeng.anappforjack.MainActivity">

        <include android:id="@+id/app_bar"
            layout="@layout/app_bar"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:text="Login Activity"
            android:onClick="goToLogin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/app_bar" />

        <Button
            android:id="@+id/button2"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:text="Account"
            android:onClick="goToAccount"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <Button
            android:id="@+id/button3"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:text="Interest"
            android:onClick="goToInterest"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button4"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:text="Register Activity"
            android:onClick="goToRegister"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button5"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:text="User Area Activity"
            android:onClick="goToUserArea"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintBottom_toTopOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button6"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:text="Main Activity"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" />
    </android.support.constraint.ConstraintLayout>
    <!-- The navigation drawer -->
    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="160dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/colorGrey6"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorGrey7_Charcoal" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey4_Grey" />

            <!-- PROFILE -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorGrey0_Gainsboro"
            android:background="@color/color_state"
            android:text="@string/navigation_profile"
            android:onClick="goToAccount" />

        <!-- ImageView
            android:id="@+id/imageView"
            android:layout_width="144dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/line" /-->

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGrey7_Charcoal" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/colorGrey4_Grey" />

            <!-- INTERESTS -->
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorGrey0_Gainsboro"
            android:background="@color/color_state"
            android:text="@string/navigation_interests"
            android:onClick="" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGrey7_Charcoal" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/colorGrey4_Grey" />

            <!-- EVENTS -->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorGrey0_Gainsboro"
            android:background="@color/color_state"
            android:text="@string/navigation_events"
            android:onClick=""/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGrey7_Charcoal" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/colorGrey4_Grey" />

            <!-- LOGIN -->
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorGrey0_Gainsboro"
            android:background="@color/color_state"
            android:text="@string/navigation_login"
            android:onClick="goToLogin" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGrey7_Charcoal" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/colorGrey4_Grey" />

        <!-- REGISTER -->
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorGrey0_Gainsboro"
            android:background="@color/color_state"
            android:text="@string/navigation_register"
            android:onClick="goToRegister" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGrey7_Charcoal" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/colorGrey4_Grey" />

        <!-- Bottom LinearLayout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorGrey7_Charcoal" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/colorGrey4_Grey" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorGrey0_Gainsboro"
                android:background="@color/color_state"
                android:text="@string/navigation_logout"
                android:onClick="goToLogin" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>

